--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin-recipes</title>
+    <title>FlavorFusionHub recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>FlavorFusionHub Recipes</h1>
+    <img src="FlavourFusionHub.jpg" alt="FlavorFusionHub" style="width: 550px; height: 500px;">
     <ul>
         <li><a href="recipes/fried-chicken.html">Crispy Fried Chicken</a></li>
         <li><a href="recipes/lasagna.html">Lasagna</a></li>
